Fix(_hero-banner): Make hero taller on mobile

--- a/app/assets/styles/blocks/_hero-banner.scss
+++ b/app/assets/styles/blocks/_hero-banner.scss
@@ -6,7 +6,7 @@
     margin: 0;
 
 	@media (max-width: 640px) {
-		min-height: 60vh;
+		min-height: 65vh;
 	}
 
 	img {
